aggiunte pagine effettive, posizionato file immagini in cartella resources, sostituito i link con link effettivi

--- a/B single.html
+++ b/B single.html
@@ -73,7 +73,7 @@
 <!-- FOOTER -->
 <footer class="footer">
 	<p>Copyright - Corelith srl</p>
-	<p>Powered by: Varano's kindom</p>
+	<p>Powered by: Varano's kingdom</p>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
