--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- HEADER -->
 	<header class="header clearfix">
-		<a href="#" class="header__logo"><img class="logo"src="Gesa-logo-4.png"></a>
+		<a href="#" class="header__logo"><img class="logo"src="C:\Users\color\Desktop\Project\gesa\resources\Gesa-logo-4.png"></a>
 		<a href="#" class="header__icon-bar">
 			<span></span>
 			<span></span>
@@ -20,14 +20,15 @@
 		</a>
 		<ul class="header__menu animate">
 			<li class="header__menu__item"><a href="index.html">Home</a></li>
-			<li class="header__menu__item"><a href="single.html">Single</a></li>
-			<li class="header__menu__item"><a href="page.html">Page</a></li>
-			<li class="header__menu__item"><a href="#">Item</a></li>
+			<li class="header__menu__item"><a href="page1.html">Trasporto materiali e rifiuti</a></li>
+			<li class="header__menu__item"><a href="page2.html">Impianti ed edilizia</a></li>
+			<li class="header__menu__item"><a href="page3.html">Pitturazione e sabbiatura</a></li>
+			<li class="header__menu__item"><a href="page4.html">Chi siamo</a></li>
 		</ul>
 	</header>
 	<!-- DARIO -->
 		<div id="dario" class="header__darioHide">
-		<a href="#" class="header__logo__dario"><img class="logo__dario"src="Gesa-logo-4.png" id="logoDario"></a>
+		<a href="#" class="header__logo__dario"><img class="logo__dario"src="C:\Users\color\Desktop\Project\gesa\resources\Gesa-logo-4.png" id="logoDario"></a>
 		<ul class="header__menu__dario animate">
 			<li class="header__menu__item"><a href="index.html">Home</a></li>
 			<li class="header__menu__item"><a href="single.html">Single</a></li>
@@ -48,7 +49,22 @@
 			<a href="#" class="button">Call to action</a>
 		</div>
 	</div>
+
 </section>
+
+<!-- BANNER IMG SX -->
+<section class="banner clearfix">
+	<div class="banner__image"><img class="logo" src="C:\Users\color\Desktop\Project\gesa\resources\Gesa-logo-4.png"></div>
+		<div class="banner__copy">
+			<div class="banner__copy__text">
+				<h3>G.E.S.A. S.r.l.</h3>
+				<h4>Chi siamo</h4>
+				<p>G.E.S.A. S.r.l. nasce nel 2010 dalla ventennale esperienza maturata nel campo della gestione rifiuti pericolosi e non, del proprio direttore tecnico Geom. Pascucci Paolo, il quale gestisce ad oggi appalti con aziende e privati tra cui FINCANTIERI S.p.A., ENEL, SIELTE S.p.A., Enti pubblici, garantendo i più elevati standard di qualità, serietà, affidabilità e professionalità.</p>
+			</div>
+		</div>
+</section>
+
+<p>"L'ambiente è il mondo dove l'uomo realizza i suoi progetti, il suo rispetto il nostro credo"</p>
 
 <!-- CARDS -->
 <section class="cards clearfix">
@@ -56,61 +72,33 @@
 	<div class="card">
 		<img class="card__image" src="https://source.unsplash.com/collection/190727/400x260" alt="nature">
 		<div class="card__copy">
-			<h3>Title card</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			<h3>Trasporto materiali e rifiuti</h3>
+			<p>Gesa ha un impegno totale nella gestione e lavorazione dei rifiuti come la trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio.</p>
 		</div>
 	</div>
 	<!-- card 2 -->
 	<div class="card">
 		<img class="card__image" src="https://source.unsplash.com/collection/190728/400x260" alt="nature">
 		<div class="card__copy">
-			<h3>Title card</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			<h3>Impianti ed edilizia</h3>
+			<p> Gesa offre la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e autostradali fornendo la completa gestione e manutenzione delle stesse.</p>
 		</div>
 	</div>
 	<!-- card 3 -->
 	<div class="card">
 		<img class="card__image" src="https://source.unsplash.com/collection/190726/400x260" alt="nature">
 		<div class="card__copy">
-			<h3>Title card</h3>
+			<h3>Pitturazione e sabbiatura</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 		</div>
 	</div>
 </section>
 
-<!-- BANNER IMG SX -->
-<section class="banner clearfix">
-	<div class="banner__image"></div>
-		<div class="banner__copy">
-			<div class="banner__copy__text">
-				<h3>Banner Title</h3>
-				<h4>Banner Subtitle</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-		</div>
-</section>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-<!-- BANNER IMG DX -->
-<section class="banner clearfix">
-		<div class="banner__copy">
-			<div class="banner__copy__text">
-				<h3>Banner Title</h3>
-				<h4>Banner Subtitle</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-		</div>
-		<div class="banner__image"></div>
-</section>
 
 <!-- FOOTER -->
 <footer class="footer">
 	<p>Copyright - Corelith srl</p>
-	<p>Powered by: Varano's kindom</p>
+	<p>Powered by: Varano's kingdom</p>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
