--- a/page3.html
+++ b/page3.html
@@ -20,9 +20,10 @@
 		</a>
 		<ul class="header__menu animate">
 			<li class="header__menu__item"><a href="index.html">Home</a></li>
-			<li class="header__menu__item"><a href="single.html">Single</a></li>
-			<li class="header__menu__item"><a href="page.html">Page</a></li>
-			<li class="header__menu__item"><a href="#">Item</a></li>
+			<li class="header__menu__item"><a href="page1.html">Trasporto materiali e rifiuti</a></li>
+			<li class="header__menu__item"><a href="page2.html">Impianti ed edilizia</a></li>
+			<li class="header__menu__item"><a href="page3.html">Pitturazione e sabbiatura</a></li>
+			<li class="header__menu__item"><a href="page4.html">Chi siamo</a></li>
 		</ul>
 	</header>
 
@@ -31,7 +32,7 @@
 	<div class="cover__filter"></div>
 	<div class="cover__caption">
 		<div class="cover__caption__copy">
-			<h1>Primary message of the home</h1>
+			<h1>PITTURAZIONE E SABBIATURA</h1>
 		</div>
 	</div>
 </section>
@@ -40,10 +41,13 @@
 	<div class="single__copy">
 		<h2 class="single__copy__title">Subtitle of the home page</h2>
 		<p class="single__copy__meta">10.07.2017 - ore 01:16 in <a href="#">News</a> by <a href="#">Corelith</a></p>
-		<p>Lorem ipsum dolor sit amet,    consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p>Lorem ipsum dolor sit amet,    consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p>Lorem ipsum dolor sit amet,    consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p>Lorem ipsum dolor sit amet,    consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>PITTURAZIONE E SABBIATURA
+Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura.
+“IMG 6062” “IMG 6066” La pitturazione è un processo di rivestimento di superfici metalliche effettuato
+a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. “IMG 0040 vid”. La
+sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per
+l'incisione di iscrizioni ed immagini su marmo e pietre. “MZVL vid” Gesa annovera tra i suoi mezzi
+macchine apposite tra le quali un unità UHP 2500 bar ad alta pressione. “IMG 5545”.</p>
 	</div>
 </article>
 
@@ -78,7 +82,7 @@
 <!-- FOOTER -->
 <footer class="footer">
 	<p>Copyright - Corelith srl</p>
-	<p>Powered by: Varano's kindom</p>
+	<p>Powered by: Varano's kingdom</p>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
