--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="script/scriptDario.js"></script>
 <script>
 	$(document).ready(function() {
 		$(".header__icon-bar").click(function(e) {
@@ -109,29 +110,7 @@
 			e.preventDefault();
 		});
 	});
-
-	//DARIO
-$(document).ready(function() {
-  var menu = $("#dario");
-  var logo = $("#logoDario")
-  var posizione = menu.position();
-
-
-  $(window).scroll(function() {
-    if ($(window).scrollTop() >280+ posizione.top&&$( window ).width()>=751) {
-		menu.addClass("header__dario");
-		menu.removeClass("header__darioHide");
-		//
-		logo.fadeTo( "slow", 1 );
-
-    } else {
-		menu.removeClass("header__dario");
-		menu.addClass("header__darioHide");
-		logo.css({'opacity':'0'});
-		logo.stop(true,true);
-    }
-  });
-});
+    $(document).ready(menuShower());
 </script>
 </body>
 </html>
