Modificata path immagini

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- HEADER -->
 	<header class="header clearfix">
-		<a href="#" class="header__logo"><img class="logo"src="C:\Users\color\Desktop\Project\gesa\resources\Gesa-logo-4.png"></a>
+		<a href="#" class="header__logo"><img class="logo"src="resources/Gesa-logo-4.png"></a>
 		<a href="#" class="header__icon-bar">
 			<span></span>
 			<span></span>
@@ -28,7 +28,7 @@
 	</header>
 	<!-- DARIO -->
 		<div id="dario" class="header__darioHide">
-		<a href="#" class="header__logo__dario"><img class="logo__dario"src="C:\Users\color\Desktop\Project\gesa\resources\Gesa-logo-4.png" id="logoDario"></a>
+		<a href="#" class="header__logo__dario"><img class="logo__dario"src="resources/Gesa-logo-4.png" id="logoDario"></a>
 		<ul class="header__menu__dario animate">
 			<li class="header__menu__item"><a href="index.html">Home</a></li>
 			<li class="header__menu__item"><a href="single.html">Single</a></li>
@@ -54,7 +54,7 @@
 
 <!-- BANNER IMG SX -->
 <section class="banner clearfix">
-	<div class="banner__image"><img class="logo" src="C:\Users\color\Desktop\Project\gesa\resources\Gesa-logo-4.png"></div>
+	<div class="banner__image"><img class="logo" src="resources/Gesa-logo-4.png"></div>
 		<div class="banner__copy">
 			<div class="banner__copy__text">
 				<h3>G.E.S.A. S.r.l.</h3>
