Utilizzo di una sola lista per entrambi i menu, animazione testo da sistemare

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<span></span>
 		<span></span>
 	</a>
-	<ul class="header__menu animate">
+	<ul id="menuList" class="header__menu animate">
 		<li class="header__menu__item"><a href="index.html">Home</a></li>
 		<li class="header__menu__item"><a href="page1.html">Trasporto materiali e rifiuti</a></li>
 		<li class="header__menu__item"><a href="page2.html">Impianti ed edilizia</a></li>
@@ -31,12 +31,7 @@
 	<a href="#" class="header__logo__dario">
 		<img class="logo__dario"src="resources/Gesa-logo-4.png" id="logoDario">
 	</a>
-	<ul id="menuList" class="header__menu__dario animate">
-		<li class="header__menu__item"><a href="index.html">Home</a></li>
-		<li class="header__menu__item"><a href="single.html">Single</a></li>
-		<li class="header__menu__item"><a href="page.html">Page</a></li>
-		<li class="header__menu__item"><a href="#">Item</a></li>
-	</ul>
+	<ul id="menuList_min" class="header__menu__dario animate"></ul>
 </div>
 <!-- COVER -->
 
