aggiunti i testi delle card, rotto un po di roba

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	</a>
 	<ul id="menuList" class="header__menu animate">
 		<li class="header__menu__item"><a href="index.html">Home</a></li>
-		<li class="header__menu__item"><a href="page1.html">Trasporto materiali e rifiuti</a></li>
-		<li class="header__menu__item"><a href="page2.html">Impianti ed edilizia</a></li>
-		<li class="header__menu__item"><a href="page3.html">Pitturazione e sabbiatura</a></li>
+		<li class="header__menu__item"><a href="page1.html">Trasporto<br> materiali e rifiuti</a></li>
+		<li class="header__menu__item"><a href="page2.html">Impianti<br> ed edilizia</a></li>
+		<li class="header__menu__item"><a href="page3.html">Pitturazione<br> e sabbiatura</a></li>
 		<li class="header__menu__item"><a href="page4.html">Chi siamo</a></li>
 	</ul>
 </header>
@@ -91,6 +91,16 @@
 	</div>
 </section>
 
+<!-- BANNER AUTORIZZAZIONI -->
+<section class="banner__autorizzazioni clearfix">
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+
+</section>
 
 <!-- FOOTER -->
 <footer class="footer">
