--- a/page3.html
+++ b/page3.html
@@ -40,9 +40,7 @@
 <article class="single">
 	<div class="single__copy">
 		<h2 class="single__copy__title">Subtitle of the home page</h2>
-		<p class="single__copy__meta">10.07.2017 - ore 01:16 in <a href="#">News</a> by <a href="#">Corelith</a></p>
-		<p>PITTURAZIONE E SABBIATURA
-Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura.
+		<p>Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura.
 “IMG 6062” “IMG 6066” La pitturazione è un processo di rivestimento di superfici metalliche effettuato
 a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. “IMG 0040 vid”. La
 sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per
@@ -51,33 +49,6 @@ macchine apposite tra le quali un unità UHP 2500 bar ad alta pressione. “IMG 
 	</div>
 </article>
 
-<!-- CARDS -->
-<section class="cards clearfix">
-	<!-- card 1 -->
-	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190727/400x260" alt="nature">
-		<div class="card__copy">
-			<h3>Title card</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-		</div>
-	</div>
-	<!-- card 2 -->
-	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190728/400x260" alt="nature">
-		<div class="card__copy">
-			<h3>Title card</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-		</div>
-	</div>
-	<!-- card 3 -->
-	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190726/400x260" alt="nature">
-		<div class="card__copy">
-			<h3>Title card</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-		</div>
-	</div>
-</section>
 
 <!-- FOOTER -->
 <footer class="footer">
