--- a/page1.html
+++ b/page1.html
@@ -40,9 +40,7 @@
 <article class="single">
 	<div class="single__copy">
 		<h2 class="single__copy__title">Subtitle of the home page</h2>
-		<p class="single__copy__meta">10.07.2017 - ore 01:16 in <a href="#">News</a> by <a href="#">Corelith</a></p>
-		<p>TRASPORTO MATERIALI E RIFIUTI
-		Gesa ha un impegno totale nella gestione e lavorazione dei rifiuti come la trasformazione, compostaggio,
+		<p>Gesa ha un impegno totale nella gestione e lavorazione dei rifiuti come la trasformazione, compostaggio,
 		trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio. “IMG 2926”
 		Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e
 		impianti di depurazione. “IMG 2925”
@@ -52,33 +50,6 @@
 	</div>
 </article>
 
-<!-- CARDS -->
-<section class="cards clearfix">
-	<!-- card 1 -->
-	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190727/400x260" alt="nature">
-		<div class="card__copy">
-			<h3>Title card</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-		</div>
-	</div>
-	<!-- card 2 -->
-	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190728/400x260" alt="nature">
-		<div class="card__copy">
-			<h3>Title card</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-		</div>
-	</div>
-	<!-- card 3 -->
-	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190726/400x260" alt="nature">
-		<div class="card__copy">
-			<h3>Title card</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-		</div>
-	</div>
-</section>
 
 <!-- FOOTER -->
 <footer class="footer">
