--- a/page2.html
+++ b/page2.html
@@ -40,9 +40,7 @@
 <article class="single">
 	<div class="single__copy">
 		<h2 class="single__copy__title">Subtitle of the home page</h2>
-		<p class="single__copy__meta">10.07.2017 - ore 01:16 in <a href="#">News</a> by <a href="#">Corelith</a></p>
-		<p>IMPIANTI ED EDILIZIA
-Gesa offre la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e
+		<p>Gesa offre la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e
 autostradali fornendo la completa gestione e manutenzione delle stesse. “IMG 1113” Ci occupiamo
 inoltre di realizzare carpenterie metal-meccaniche e navali e impiantistica industriale e civile.”IMG 5193
 vid” Sono comprese operazioni di montaggio, smontaggio e riparazione di impiantistica e tubazioni
@@ -52,33 +50,6 @@ alternativa: fotovoltaico, termica, solare ecc... “IMG 3990”
 	</div>
 </article>
 
-<!-- CARDS -->
-<section class="cards clearfix">
-	<!-- card 1 -->
-	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190727/400x260" alt="nature">
-		<div class="card__copy">
-			<h3>Title card</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-		</div>
-	</div>
-	<!-- card 2 -->
-	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190728/400x260" alt="nature">
-		<div class="card__copy">
-			<h3>Title card</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-		</div>
-	</div>
-	<!-- card 3 -->
-	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190726/400x260" alt="nature">
-		<div class="card__copy">
-			<h3>Title card</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-		</div>
-	</div>
-</section>
 
 <!-- FOOTER -->
 <footer class="footer">
