--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
 		<span></span>
 		<span></span>
 	</a>
+	<!--<div class="header__menu__container clearfix">-->
 	<ul id="menuList" class="header__menu animate">
-		<li class="header__menu__item"><a href="index.html">Home</a></li>
+		<li class="header__menu__item"><a href="page4.html">Chi siamo</a></li>
 		<li class="header__menu__item"><a href="page1.html">Trasporto<br> materiali e rifiuti</a></li>
 		<li class="header__menu__item"><a href="page2.html">Impianti<br> ed edilizia</a></li>
 		<li class="header__menu__item"><a href="page3.html">Pitturazione<br> e sabbiatura</a></li>
-		<li class="header__menu__item"><a href="page4.html">Chi siamo</a></li>
+		<li class="header__menu__item"><a href="index.html">Home</a></li>
 	</ul>
+	<!--</div>-->
 </header>
 <!-- DARIO -->
 <div id="dario" class="header__darioHide animate" >
