--- a/index.html
+++ b/index.html
@@ -11,30 +11,7 @@
 <body>
 
 <!-- HEADER -->
-<header id="header" class="header clearfix">
-	<a href="#" class="header__logo"><img class="logo"src="resources/Gesa-logo-4.png"></a>
-	<a href="#" class="header__icon-bar">
-		<span></span>
-		<span></span>
-		<span></span>
-	</a>
-	<!--<div class="header__menu__container clearfix">-->
-	<ul id="menuList" class="header__menu animate">
-		<li class="header__menu__item"><a href="page4.html">Chi siamo</a></li>
-		<li class="header__menu__item"><a href="page1.html">Trasporto<br> materiali e rifiuti</a></li>
-		<li class="header__menu__item"><a href="page2.html">Impianti<br> ed edilizia</a></li>
-		<li class="header__menu__item"><a href="page3.html">Pitturazione<br> e sabbiatura</a></li>
-		<li class="header__menu__item"><a href="index.html">Home</a></li>
-	</ul>
-	<!--</div>-->
-</header>
-<!-- DARIO -->
-<div id="dario" class="header__darioHide animate" >
-	<a href="#" class="header__logo__dario">
-		<img class="logo__dario"src="resources/Gesa-logo-4.png" id="logoDario">
-	</a>
-	<ul id="menuList_min" class="header__menu__dario animate"></ul>
-</div>
+<div id="header_container"></div>
 <!-- COVER -->
 
 <section class="cover">
@@ -111,15 +88,16 @@
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="script/scriptDario.js"></script>
 <script>
     $(document).ready(function() {
         $(".header__icon-bar").click(function(e) {
             $(".header__menu").toggleClass("is-open");
             e.preventDefault();
         });
+
+        $('#header_container').load('header.html');
     });
-    $(document).ready(menuShower());
+//    $(document).ready(menuShower());
 </script>
 </body>
 </html>
