fix header tutte le pagine

--- a/page3.html
+++ b/page3.html
@@ -43,16 +43,11 @@ macchine apposite tra le quali un unità UHP 2500 bar ad alta pressione. “IMG 
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
     $(document).ready(function() {
-        $(".header__icon-bar").click(function(e) {
-            $(".header__menu").toggleClass("is-open");
-            e.preventDefault();
-        });
-
         $('#header_container').load('header.html');
     });
-    $(document).ready(menuShower());
 </script>
 </body>
 </html>
