--- a/page4.html
+++ b/page4.html
@@ -53,16 +53,11 @@ regolamenti che necessitano.</p>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
     $(document).ready(function() {
-        $(".header__icon-bar").click(function(e) {
-            $(".header__menu").toggleClass("is-open");
-            e.preventDefault();
-        });
-
         $('#header_container').load('header.html');
     });
-    $(document).ready(menuShower());
 </script>
 </body>
 </html>
