--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="header_container"></div>
 <!-- COVER -->
 
-<section class="cover">
+<section id="cover" class="cover">
 
 
 	<div class="cover__filter"></div>
@@ -23,6 +23,7 @@
 			<h1>Primary message of the home</h1>
 			<h2>Subtitle of the home page</h2>
 			<a href="#" class="button">Call to action</a>
+			<div id="dots-container"> </div>
 		</div>
 	</div>
 
@@ -88,16 +89,26 @@
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="script/scriptDario.js"></script>
+<script src="script/PhotoSlider.js"></script>
 <script>
+	var photos=[];
+	var currentPosition=0;
+    var sliderInterval;
+
     $(document).ready(function() {
         $(".header__icon-bar").click(function(e) {
             $(".header__menu").toggleClass("is-open");
             e.preventDefault();
         });
+//        menuShower();
+        photos=startSlider();
+        setPhotoByIndex(currentPosition);
+        currentPosition++;
+        currentPosition=setSliderInterval(currentPosition);
 
         $('#header_container').load('header.html');
     });
-//    $(document).ready(menuShower());
 </script>
 </body>
 </html>
