--- a/page3.html
+++ b/page3.html
@@ -37,16 +37,14 @@ macchine apposite tra le quali un unità UHP 2500 bar ad alta pressione. “IMG 
 
 
 <!-- FOOTER -->
-<footer class="footer">
-	<p>Copyright - Corelith srl</p>
-	<p>Powered by: Varano's kingdom</p>
-</footer>
+<div id="footer_container"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
     $(document).ready(function() {
         $('#header_container').load('header.html');
+        $('#footer_container').load('footer.html');
     });
 </script>
 </body>
