--- a/page4.html
+++ b/page4.html
@@ -47,16 +47,13 @@ regolamenti che necessitano.</p>
 
 
 <!-- FOOTER -->
-<footer class="footer">
-	<p>Copyright - Corelith srl</p>
-	<p>Powered by: Varano's kingdom</p>
-</footer>
+<div id="footer_container"></div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
     $(document).ready(function() {
         $('#header_container').load('header.html');
+        $('#footer_container').load('footer.html');
     });
 </script>
 </body>
