--- a/page1.html
+++ b/page1.html
@@ -38,15 +38,13 @@
 
 
 <!-- FOOTER -->
-<footer class="footer">
-	<p>Copyright - Corelith srl</p>
-	<p>Powered by: Varano's kingdom</p>
-</footer>
+<div id="footer_container"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
     $(document).ready(function() {
         $('#header_container').load('header.html');
+        $('#footer_container').load('footer.html');
     });
 </script>
 </body>
