--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	</div>
 </section>
 
-<p>"L'ambiente è il mondo dove l'uomo realizza i suoi progetti, il suo rispetto il nostro credo"</p>
+<h1>"L'ambiente è il mondo dove l'uomo realizza i suoi progetti, il suo rispetto il nostro credo"</h1>
 
 <!-- CARDS -->
 <section class="cards clearfix">
@@ -50,7 +50,7 @@
 		<img class="card__image" src="https://source.unsplash.com/collection/190727/400x260" alt="nature">
 		<div class="card__copy">
 			<h3>Trasporto materiali e rifiuti</h3>
-			<p>Gesa ha un impegno totale nella gestione e lavorazione dei rifiuti come la trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio.</p>
+			<p>Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti come la trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
 		</div>
 	</div>
 	<!-- card 2 -->
@@ -58,7 +58,7 @@
 		<img class="card__image" src="https://source.unsplash.com/collection/190728/400x260" alt="nature">
 		<div class="card__copy">
 			<h3>Impianti ed edilizia</h3>
-			<p> Gesa offre la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e autostradali fornendo la completa gestione e manutenzione delle stesse.</p>
+			<p>Offriamo la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e autostradali fornendo la completa gestione e manutenzione delle stesse. Ci occupiamo inoltre di realizzare carpenterie metal-meccaniche e navali e impiantistica industriale e civile. Sono comprese operazioni di montaggio, smontaggio e riparazione di impiantistica e tubazioni industriali di qualsiasi genere. In piena eco sostenibilità realizziamo impianti per l’energia alternativa: fotovoltaico, termica, solare.</p>
 		</div>
 	</div>
 	<!-- card 3 -->
@@ -66,7 +66,7 @@
 		<img class="card__image" src="https://source.unsplash.com/collection/190726/400x260" alt="nature">
 		<div class="card__copy">
 			<h3>Pitturazione e sabbiatura</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			<p>Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura. La pitturazione è un processo di rivestimento di superfici metalliche effettuato a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. La sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per l'incisione di iscrizioni ed immagini su marmo e pietre.Gesa annovera tra i suoi mezzi macchine apposite tra le quali un'unità UHP 2500 bar ad alta pressione.</p>
 		</div>
 	</div>
 </section>
