[FIX] Middle page divider implemented

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 		</div>
 	</div>
 </section>
-
-<h1>"L'ambiente è il mondo dove l'uomo realizza i suoi progetti, il suo rispetto il nostro credo"</h1>
+<div class="middle_page_divider">
+	<h1 class="middle_page_divider_content">"L'ambiente è il mondo dove l'uomo realizza i suoi progetti, il suo rispetto il nostro credo"</h1>
+</div>
 
 <!-- CARDS -->
 <section class="cards clearfix">
