[FIX] Migliorato footer e aggiunta logica per mappa

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,17 @@
 <footer class="footer">
-    <p>Copyright - Corelith srl</p>
-    <p>Powered by: Varano's kingdom</p>
+    <div class="location_container">
+        <div id="googleMap"></div>
+        <div class="location_info">
+            <h1>SEDE AMMINISTRATIVA</h1>
+            <p>via Annunzatella,23 - Castellammare di Stabia (NA)</p>
+            <h1>SEDE OPERATIVA</h1>
+            <p>via Casarelli - loc. Marna - San Antonio Abate (NA)</p>
+            <h1>CONTATTACI</h1>
+            <a href="mailto:gesa.srl_@libero.it?Subject=Info" target="_top">Send Mail</a>
+        </div>
+    </div>
+
+    <div class="copyright_container">
+        <span class="copyright"> © Copyright 2017 G.E.S.A. srl - Tutti i diritti sono riservati.</br> P.IVA 123456789 REA 123456789</span>
+    </div>
 </footer>
