--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@
 <!-- COVER -->
 
 <section id="cover" class="cover">
-
-
 	<div class="cover__filter"></div>
 	<div class="cover__caption">
 		<div class="cover__caption__copy">
-			<h1>Primary message of the home</h1>
-			<h2>Subtitle of the home page</h2>
-			<a href="#" class="button">Call to action</a>
+			<div id="slider_label"></div>
 			<div id="dots-container"> </div>
 		</div>
 	</div>
