[FIX] fixato il click dei dot dello slider dopo il cambio z-index

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 <!-- HEADER -->
 <div id="header_container"></div>
 <!-- COVER -->
+<div id="dots-dots-container">
+	<div id="dots-container"> </div>
+</div>
+
 
 <section id="cover" class="cover">
 	<div class="cover__filter"></div>
 	<div class="cover__caption">
 		<div class="cover__caption__copy">
 			<div id="slider_label"></div>
-			<div id="dots-container"> </div>
 		</div>
 	</div>
 
