modificate le foto delle altre pagine

--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
 <div id="header_container"></div>
 
 <!-- COVER -->
-<section class="cover cover--single">
+<section class="cover" style="background-image: url(resources/PhotoSlider/Impianti.jpg);">
 	<div class="cover__filter"></div>
 	<div class="cover__caption">
 		<div class="cover__caption__copy">
