--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
 
 <!-- BANNER AUTORIZZAZIONI -->
 <section class="banner__autorizzazioni clearfix">
-
-		<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
-		<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
-		<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
-		<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
-		<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
-		<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
-
+	<div><h1>G.E.S.A. COLLABORA CON</h1></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
 </section>
 
 <!-- FOOTER -->
