aggiunto numero di telefono al footer

--- a/footer.html
+++ b/footer.html
@@ -7,6 +7,7 @@
             <h1>SEDE OPERATIVA</h1>
             <p>via Casarelli - loc. Marna - San Antonio Abate (NA)</p>
             <h1>CONTATTACI</h1>
+            <p>Tel. 081/8702093 - 081/8735620</p>
             <a href="mailto:gesa.srl_@libero.it?Subject=Info" target="_top">Send Mail</a>
         </div>
     </div>
