modifica header menu dario blu/bianco

--- a/page2.html
+++ b/page2.html
@@ -26,12 +26,7 @@
 <article class="single">
 	<div class="single__copy">
 		<h2 class="single__copy__title">Subtitle of the home page</h2>
-		<p>Gesa offre la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e
-autostradali fornendo la completa gestione e manutenzione delle stesse. “IMG 1113” Ci occupiamo
-inoltre di realizzare carpenterie metal-meccaniche e navali e impiantistica industriale e civile.”IMG 5193
-vid” Sono comprese operazioni di montaggio, smontaggio e riparazione di impiantistica e tubazioni
-industriali di qualsiasi genere. “IMG 1635” In piena eco sostenibilità realizziamo impianti per l’energia
-alternativa: fotovoltaico, termica, solare ecc... “IMG 3990”
+		<p>Gesa offre la piena disponibilità nella realizzazione di qualsiasi tipologia di lavori edili: pubblici e privati, demaniali e forestali, civili e industriali, marittime e aeroportuali, autostradali statali e non, comprendendo piani di gestione  e manutenzione degli stessi. Disponiamo di uno staff specializzato che ci permette di offrire la progettazione, realizzazione e installazione di impianti elettrici, idrici, antincendio, telefonici, di condizionamento, automazione, e tutto quanto concerne impianti che utilizzano energie alternative come il fotovoltaico, l’energia termica, solare ecc… Tra le nostre competenze rientra la possibilità di realizzare lavori di scavo, demolizione, movimentazione materie, con conseguente gestione e messa in riserve degli stessi. Siamo aperti a azioni di noleggio e vendita di qualsiasi mezzo e attrezzatura nei campi del civile, edile, industriale, navale e aeroportuale. Non meno importante il nostro impegno nella realizzazione di opere nel campo della prevenzione e della sicurezza di ogni tipo antincendio e non.
 </p>
 	</div>
 </article>
