--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <section class="cards clearfix">
 	<!-- card 1 -->
 	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190727/400x260" alt="nature">
+		<img class="card__image" src="resources/Card/Trasporti.png">
 		<div class="card__copy">
 			<h3>Trasporto materiali e rifiuti</h3>
 			<p>Abbiamo un impegno totale nella gestione e lavorazione dei rifiuti come la trasformazione, compostaggio, trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio. Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e impianti di depurazione. Ci occupiamo, nel pieno rispetto delle normative e delle legislazioni, del trasporto di materiali e merci di qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro commercializzazione.</p>
@@ -54,7 +54,7 @@
 	</div>
 	<!-- card 2 -->
 	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190728/400x260" alt="nature">
+		<img class="card__image" src="resources/Card/Impianti.png">
 		<div class="card__copy">
 			<h3>Impianti ed edilizia</h3>
 			<p>Offriamo la possibilità di realizzare opere e strutture pubbliche e private, marittime, aeroportuali e autostradali fornendo la completa gestione e manutenzione delle stesse. Ci occupiamo inoltre di realizzare carpenterie metal-meccaniche e navali e impiantistica industriale e civile. Sono comprese operazioni di montaggio, smontaggio e riparazione di impiantistica e tubazioni industriali di qualsiasi genere. In piena eco sostenibilità realizziamo impianti per l’energia alternativa: fotovoltaico, termica, solare.</p>
@@ -62,7 +62,7 @@
 	</div>
 	<!-- card 3 -->
 	<div class="card">
-		<img class="card__image" src="https://source.unsplash.com/collection/190726/400x260" alt="nature">
+		<img class="card__image" src="resources/Card/Pitturazione.png">
 		<div class="card__copy">
 			<h3>Pitturazione e sabbiatura</h3>
 			<p>Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura. La pitturazione è un processo di rivestimento di superfici metalliche effettuato a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. La sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per l'incisione di iscrizioni ed immagini su marmo e pietre.Gesa annovera tra i suoi mezzi macchine apposite tra le quali un'unità UHP 2500 bar ad alta pressione.</p>
@@ -73,9 +73,9 @@
 <!-- BANNER AUTORIZZAZIONI -->
 <section class="banner__autorizzazioni clearfix">
 	<div><h1>G.E.S.A. COLLABORA CON</h1></div>
-	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
-	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
-	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Fincantieri.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Sielte.png"></div>
+	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Card/Enel.png"></div>
 	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
 	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
 	<div class="banner__image__autorizzazioni"><img class="logo" src="resources/Gesa-logo-4.png"></div>
