--- a/page1.html
+++ b/page1.html
@@ -26,13 +26,7 @@
 <article class="single">
 	<div class="single__copy">
 		<h2 class="single__copy__title">Subtitle of the home page</h2>
-		<p>Gesa ha un impegno totale nella gestione e lavorazione dei rifiuti come la trasformazione, compostaggio,
-		trattamento, rigenerazione, recupero, innocuizzazione, discarica, smaltimento e stoccaggio. “IMG 2926”
-		Offriamo la completa assistenza e consulenza nell’ambito dei rifiuti realizzando bonifiche ambientali e
-		impianti di depurazione. “IMG 2925”
-		Ci occupiamo nel pieno rispetto delle normative e delle legislazioni del trasporto di materiali e merci di
-		qualsiasi tipologia: da recupero, speciali, pericolosi e non, disponendoci inoltre della loro
-		commercializzazione. “IMG 2929”</p>
+		<p>Gesa è attiva nel trasporto per terzi e non, di qualsiasi prodotto per l’edilizia compresi calcestruzzo,  materiali da recupero e non, inerti e manti bituminosi, nonché prodotti petroliferi. Siamo inoltre competenti nella commercializzazione e la vendita di prodotti quali oli , grassi e carburanti. Particolare impegno lo riserviamo nella progettazione e la gestione, in conto proprio o in conto terzi, di impianti di depurazione, trasformazione, compostaggio, trattamento e rigenerazione. Ancora operiamo nel  recupero, innocuizzazione, discarica, ammasso, stoccaggio e smaltimento rifiuti di ogni genere, tipologia e provenienza o di loro frazioni separate, siano essi  speciali pericolosi e non. È nostra prerogativa offrire l’assistenza la consulenza l’intermediazione e la commercializzazione di ogni tipologia di rifiuti inclusi rottami ferrosi e loro leghe. Eseguiamo in piena eco sostenibilità opere di bonifica ambientale e di ogni tipologia di sito disponendoci inoltre della possibilità di noleggio di autobotti per la pulizia proponendo inoltre video ispezioni a tubature ed impianti. Non ultimo il nostro impegno nelle disinfestazioni e nelle opere di sanificazione in genere.</p>
 	</div>
 </article>
 
