--- a/page3.html
+++ b/page3.html
@@ -26,12 +26,8 @@
 <article class="single">
 	<div class="single__copy">
 		<h2 class="single__copy__title">Subtitle of the home page</h2>
-		<p>Di particolare rilievo sono i processi di lavorazione altamente specializzati quali pitturazione e sabbiatura.
-“IMG 6062” “IMG 6066” La pitturazione è un processo di rivestimento di superfici metalliche effettuato
-a scopo decorativo e di protezione dalla corrosione e azione di agenti aggressivi. “IMG 0040 vid”. La
-sabbiatura è un procedimento meccanico utilizzato per la pulizia superficiale di metalli o anche per
-l'incisione di iscrizioni ed immagini su marmo e pietre. “MZVL vid” Gesa annovera tra i suoi mezzi
-macchine apposite tra le quali un unità UHP 2500 bar ad alta pressione. “IMG 5545”.</p>
+		<p>Tra le attività che Gesa offre rientrano particolari processi di lavorazione altamente specializzati quali pitturazione e sabbiatura. La pitturazione è una complessa operazione di rivestimento delle superfici in genere metalliche che viene effettuato da operatori pienamente competenti nel settore equipaggiati con le migliori attrezzature. La pitturazione è utilizzata sopratutto a scopo decorativo e per proteggere le superfici dall’azione di agenti aggressivi, logoranti e corrosivi di diverso tipo. La sabbiatura è un operazione meccanica molto specializzata usata per lo più nella pulizia superficiale di metalli o per scopi espressivi quali l’incisione di iscrizioni ed immagini su marmi e pietre. Gesa vanta l’impiego di uno staff altamente specializzato che lavora nei massimi regimi di sicurezza, disponiamo inoltre di mezzi e macchine apposite tra le quali un unità UHP 2500 Bar ad alta pressione indispensabili per questo particolare tipo di operazioni.
+		</p>
 	</div>
 </article>
 
