--- a/page4.html
+++ b/page4.html
@@ -14,7 +14,7 @@
 <div id="header_container"></div>
 
 <!-- COVER -->
-<section class="cover" style="background-image: url(resources/PhotoSlider/Sabbiatura.jpg);">
+<section class="cover" style="background-image: url(resources/Card/Chisiamo.png);">
 	<div class="cover__filter"></div>
 	<div class="cover__caption">
 		<div class="cover__caption__copy">
