rifiniture prima della messa online

--- a/page3.html
+++ b/page3.html
@@ -14,7 +14,7 @@
 <div id="header_container"></div>
 
 <!-- COVER -->
-<section class="cover" style="background-image: url(resources/PhotoSlider/Pitturazione.jpg);>
+<section class="cover" style="background-image: url(resources/PhotoSlider/Pitturazione.jpg);">
 	<div class="cover__filter"></div>
 	<div class="cover__caption">
 		<div class="cover__caption__copy">
@@ -25,7 +25,6 @@
 
 <article class="single">
 	<div class="single__copy">
-		<h2 class="single__copy__title">Subtitle of the home page</h2>
 		<p>Tra le attività che Gesa offre rientrano particolari processi di lavorazione altamente specializzati quali pitturazione e sabbiatura. La pitturazione è una complessa operazione di rivestimento delle superfici in genere metalliche che viene effettuato da operatori pienamente competenti nel settore equipaggiati con le migliori attrezzature. La pitturazione è utilizzata sopratutto a scopo decorativo e per proteggere le superfici dall’azione di agenti aggressivi, logoranti e corrosivi di diverso tipo. La sabbiatura è un operazione meccanica molto specializzata usata per lo più nella pulizia superficiale di metalli o per scopi espressivi quali l’incisione di iscrizioni ed immagini su marmi e pietre. Gesa vanta l’impiego di uno staff altamente specializzato che lavora nei massimi regimi di sicurezza, disponiamo inoltre di mezzi e macchine apposite tra le quali un unità UHP 2500 Bar ad alta pressione indispensabili per questo particolare tipo di operazioni.
 		</p>
 	</div>
