--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <!-- BANNER IMG SX -->
 <section class="banner clearfix">
-	<div class="banner__image"><img class="logo" src="resources/Gesa-logo-4.png"></div>
+	<div class="banner__image"></div>
 	<div class="banner__copy">
 		<div class="banner__copy__text">
 			<h3>G.E.S.A. S.r.l.</h3>
